[package]
name = "wasm-rs-dbg-example"
version = "0.1.0"
authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wasm-rs-dbg-example-test"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2.70"
wasm-rs-dbg = { path = "..", default-features = false, features = ["console-warn"] }
